<resources>
    <string name="app_name">Not Hangman</string>

    <string name="title">Definitely !Hangman</string>
    <string name="instruction">You have total of 6 tries.</string>
    <string name="prompt1">Incorrect Letter(s): </string>
    <string name="hint">Answer</string>
    <string name="restart">Restart</string>
    <string name="exit">Exit</string>

    <string name="lost">You lost.</string>
    <string name="won">You won.</string>
    <string name="empty">Value empty</string>
    <string name="existed"> is already existed</string>
</resources>